alignment footer fix

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -89,6 +89,6 @@ background-color: #333;
 color: #fff;
 padding: 2px;
 position: absolute;
-bottom: -90px;
+bottom: -150px;
 width: 100%;
 }
